--- a/Mizuka-Typing-2.0/package.json
+++ b/Mizuka-Typing-2.0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuka-typing-2.0",
-  "version": "2.2.2",
+  "version": "2.9.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -13,6 +13,7 @@
     "random-words": "^1.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.0",
     "react-toastify": "^10.0.4",
